add Model e Respository

--- a/backend/selfpark/src/main/resources/application.properties
+++ b/backend/selfpark/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=selfpark
 
 
-spring.datasource.url=jdbc:postgresql://pg-2d3067ce-antholiveira0203-8e7f.c.aivencloud.com:15285/defaultdb?sslmode=require
-spring.datasource.username=avnadmin
+spring.datasource.url=
+spring.datasource.username=
 spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
