--- a/backend/selfpark/src/main/resources/application.properties
+++ b/backend/selfpark/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-spring.application.name=selfpark
+spring.application.name=BackEnd
 
-
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://ep-empty-credit-ac1r7t79.sa-east-1.aws.neon.tech:5432/neondb?sslmode=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_kOQ3TEFh4uqZ
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
